# reLib

./: .gitmodules  CMakeLists.txt
include/re/lib/: Ring.hpp  common.hpp
include/re/lib/container/: indexed_iterator.hpp  revolver.hpp  ring_array.hpp  subspan.hpp
include/re/lib/fft/: acf.hpp  common.hpp  fft.hpp  hann_window.hpp  real_fft.hpp  simd_fft.hpp
include/re/lib/math/: adaptive_threshold.hpp  comb_filter.hpp  complex.hpp  element.hpp  mean.hpp  normalize.hpp  reductions.hpp
include/re/lib/math/fft/: acf.hpp  common.hpp  fft.hpp  hann_window.hpp  real_fft.hpp
include/re/lib/simd/: identification.hpp  simd.hpp  simd_memory_iterator.hpp
include/re/lib/simd/intrinsics/: avx.hpp  avx512.hpp  neon.hpp  sse3.hpp  template.hpp
tests/: CMakeLists.txt  benchmark.cpp
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/unit/simd/: CMakeLists.txt  main.cpp
